Squash commit